--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     :root { --azul: #1a3b5d; --azul-claro: #2c5a9e; --cinza: #f4f6f9; }
     body { margin: 0; font-family: 'Segoe UI', sans-serif; background: var(--cinza); color: #333; line-height: 1.6; }
     header { background: var(--azul); color: white; padding: 1.5rem 1rem; text-align: center; }
-    nav { background: white; padding: .8rem; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,.1); position: sticky; top: 0; z-index: 10; }
+    nav { background: white; padding: .8rem; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,.1); position: sticky; top: 0; }
     nav a { margin: 0 .7rem; color: var(--azul); font-weight: 600; text-decoration: none; }
     nav a:hover { text-decoration: underline; }
     .conteudo { max-width: 800px; margin: 2rem auto; padding: 0 1rem; }
@@ -24,12 +24,12 @@
     <p>Supervisão Independente & Governança Estratégica – Brasil</p>
   </header>
   <nav>
-    <a href="#pt">Português</a>
-    <a href="#en">English</a>
-    <a href="#es">Español</a>
+    <a href="/">Português</a>
+    <a href="/en.html">English</a>
+    <a href="/es.html">Español</a>
   </nav>
   <section class="conteudo">
-    <div id="pt" class="bio">
+    <div class="bio">
       <h2>O que faço</h2>
       <p>Acompanho investidores estrangeiros no Brasil com supervisão estratégica independente, governança e apoio executivo de alto nível. Sou a extensão local de conselhos, comitês e diretores que precisam de clareza, controle e alinhamento em ambientes complexos.</p>
       <p>Meu foco é na camada estratégica — não na execução diária. Inclui oversight de operações, SPEs, joint ventures e ambientes regulados.</p>
@@ -43,36 +43,9 @@
         Email: <a href="mailto:falacomigo@lhsc.srv.br" style="color: var(--azul-claro);">falacomigo@lhsc.srv.br</a></p>
       </div>
     </div>
-    <div id="en" class="bio" style="display:none;">
-      <h2>What I do</h2>
-      <p>I provide foreign investors with independent strategic oversight, governance supervision, and senior-level advisory support in Brazil.</p>
-      <p>I act as a trusted local extension for boards, investment committees, and executives—ensuring clarity, control, and alignment in complex markets.</p>
-      <p>Focus is strategic: oversight of operations, SPEs, JVs, and regulated environments—no day-to-day management.</p>
-      <h2>Experience</h2>
-      <p>Five-plus years with Keppel and MaxCasa: monitored international investors, oversaw managers, led MaxCasa BLX (240 units, Panamby, SP).</p>
-      <h2>How it works</h2>
-      <p>Selective engagements: long-term oversight, strategic advisory, or local representation—always discreet, independent, due-diligence ready.</p>
-      <div class="contato">
-        <p><strong>Contact</strong><br>
-        WhatsApp: <a href="https://wa.me/5511981011148" style="color: var(--azul-claro);">+55 11 981.011.148</a><br>
-        Email: <a href="mailto:talktome@lhsc.srv.br" style="color: var(--azul-claro);">talktome@lhsc.srv.br</a></p>
-      </div>
-    </div>
-    <div id="es" class="bio" style="display:none;">
-      <h2>Qué hago</h2>
-      <p>Ofrezco supervisión estratégica independiente, gobernanza y asesoría ejecutiva de alto nivel a inversores extranjeros que operan en Brasil.</p>
-      <p>Soy la extensión local de consejos, comités y directivos: garantizo claridad, control y alineación en entornos complejos.</p>
-      <p>Me enfoco en la capa estratégica — no en la ejecución diaria —: supervisión de operaciones, SPEs, JVs y entornos regulados.</p>
-      <h2>Experiencia</h2>
-      <p>Más de cinco años con Keppel y MaxCasa: monitoreé inversores internacionales, supervisé gestores, lideré MaxCasa BLX (240 unidades, Panamby, SP).</p>
-      <h2>Cómo funciona</h2>
-      <p>Mandatos selectivos: supervisión a largo plazo, asesoría estratégica o representación local — siempre discreto e independiente.</p>
-      <div class="contato">
-        <p><strong>Contacto</strong><br>
-        WhatsApp: <a href="https://wa.me/5511981011148" style="color: var(--azul-claro);">+55 11 981.011.148</a><br>
-        Email: <a href="mailto:hablame@lhsc.srv.br" style="color: var(--azul-claro);">hablame@lhsc.srv.br</a></p>
-      </div>
-    </div>
   </section>
   <footer>
-    &copy; 2026 Luiz Henrique Cabreira – Todos
+    &copy; 2026 Luiz Henrique Cabreira – Todos os direitos reservados.
+  </footer>
+</body>
+</html>
