--- a/index.html
+++ b/index.html
@@ -1,51 +1,274 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Luiz Henrique Cabreira – Governança Independente</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>LHSC — Independent Executive Oversight</title>
+
   <style>
-    :root { --azul: #1a3b5d; --azul-claro: #2c5a9e; --cinza: #f4f6f9; }
-    body { margin: 0; font-family: 'Segoe UI', sans-serif; background: var(--cinza); color: #333; line-height: 1.6; }
-    header { background: var(--azul); color: white; padding: 1.5rem 1rem; text-align: center; }
-    nav { background: white; padding: .8rem; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,.1); position: sticky; top: 0; }
-    nav a { margin: 0 .7rem; color: var(--azul); font-weight: 600; text-decoration: none; }
-    nav a:hover { text-decoration: underline; }
-    .conteudo { max-width: 800px; margin: 2rem auto; padding: 0 1rem; }
-    .bio { background: white; padding: 2rem; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,.08); }
-    .contato { margin-top: 1.5rem; font-size: .95rem; }
-    footer { text-align: center; padding: 1.5rem; background: var(--azul); color: white; font-size: .85rem; }
-    @media (max-width: 480px) { body { font-size: .95rem; } nav { padding: .5rem; } .bio { padding: 1.5rem; } }
+    :root {
+      --primary: #0b2a4a;   /* azul gravata */
+      --secondary: #163d66;
+      --accent: #2f6fad;
+      --text: #1f2933;
+      --muted: #6b7280;
+      --bg: #f5f7fa;
+      --white: #ffffff;
+    }
+
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Inter, Helvetica, Arial, sans-serif;
+      color: var(--text);
+      background: var(--bg);
+      line-height: 1.6;
+    }
+
+    header {
+      background: var(--primary);
+      color: var(--white);
+      padding: 1.5rem 1rem;
+    }
+
+    .container {
+      max-width: 960px;
+      margin: 0 auto;
+      padding: 0 1rem;
+    }
+
+    .top-bar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+      gap: 1rem;
+    }
+
+    .brand {
+      font-weight: 600;
+      letter-spacing: 0.5px;
+    }
+
+    .lang-switch button {
+      background: transparent;
+      border: 1px solid rgba(255,255,255,0.4);
+      color: var(--white);
+      padding: 0.3rem 0.6rem;
+      margin-left: 0.4rem;
+      border-radius: 4px;
+      cursor: pointer;
+      font-size: 0.85rem;
+    }
+
+    .lang-switch button.active {
+      background: var(--white);
+      color: var(--primary);
+      font-weight: 600;
+    }
+
+    main {
+      padding: 3rem 0;
+    }
+
+    section {
+      margin-bottom: 3rem;
+    }
+
+    h1 {
+      font-size: 2rem;
+      line-height: 1.3;
+      margin-bottom: 1rem;
+      color: var(--primary);
+    }
+
+    h2 {
+      font-size: 1.25rem;
+      margin-bottom: 0.75rem;
+      color: var(--secondary);
+    }
+
+    p {
+      margin-bottom: 1rem;
+      max-width: 720px;
+    }
+
+    ul {
+      padding-left: 1.2rem;
+    }
+
+    li {
+      margin-bottom: 0.5rem;
+    }
+
+    .card {
+      background: var(--white);
+      border-radius: 8px;
+      padding: 1.5rem;
+      box-shadow: 0 6px 20px rgba(0,0,0,0.05);
+    }
+
+    footer {
+      background: #0e2238;
+      color: #d1d5db;
+      padding: 2rem 1rem;
+      font-size: 0.9rem;
+    }
+
+    footer a {
+      color: #d1d5db;
+      text-decoration: none;
+    }
+
+    footer a:hover {
+      text-decoration: underline;
+    }
+
+    @media (max-width: 600px) {
+      h1 {
+        font-size: 1.6rem;
+      }
+
+      .top-bar {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+    }
   </style>
 </head>
+
 <body>
-  <header>
-    <h1>Luiz Henrique Cabreira</h1>
-    <p>Supervisão Independente & Governança Estratégica – Brasil</p>
-  </header>
-  <nav>
-    <a href="/">Português</a>
-    <a href="/en.html">English</a>
-    <a href="/es.html">Español</a>
-  </nav>
-  <section class="conteudo">
-    <div class="bio">
-      <h2>O que faço</h2>
-      <p>Acompanho investidores estrangeiros no Brasil com supervisão estratégica independente, governança e apoio executivo de alto nível. Sou a extensão local de conselhos, comitês e diretores que precisam de clareza, controle e alinhamento em ambientes complexos.</p>
-      <p>Meu foco é na camada estratégica — não na execução diária. Inclui oversight de operações, SPEs, joint ventures e ambientes regulados.</p>
-      <h2>Experiência</h2>
-      <p>Mais de cinco anos com Keppel e MaxCasa: monitorava investidores internacionais, fiscalizava gestores e liderei o MaxCasa BLX – 240 unidades no Panamby, São Paulo.</p>
-      <h2>Como funciona</h2>
-      <p>Mandatos seletivos: oversight de longo prazo, consultoria estratégica ou representação local. Discrição total, independência garantida.</p>
-      <div class="contato">
-        <p><strong>Contato</strong><br>
-        WhatsApp: <a href="https://wa.me/5511981011148" style="color: var(--azul-claro);">+55 11 981.011.148</a><br>
-        Email: <a href="mailto:falacomigo@lhsc.srv.br" style="color: var(--azul-claro);">falacomigo@lhsc.srv.br</a></p>
-      </div>
+
+<header>
+  <div class="container top-bar">
+    <div class="brand">LHSC</div>
+    <div class="lang-switch">
+      <button onclick="setLang('pt')" id="btn-pt">PT</button>
+      <button onclick="setLang('en')" id="btn-en" class="active">EN</button>
+      <button onclick="setLang('es')" id="btn-es">ES</button>
     </div>
+  </div>
+</header>
+
+<main class="container">
+
+  <!-- HERO -->
+  <section class="card">
+    <h1 data-i18n="title"></h1>
+    <p data-i18n="intro"></p>
   </section>
-  <footer>
-    &copy; 2026 Luiz Henrique Cabreira – Todos os direitos reservados.
-  </footer>
+
+  <!-- WHAT I DO -->
+  <section>
+    <h2 data-i18n="what_title"></h2>
+    <p data-i18n="what_body"></p>
+  </section>
+
+  <!-- HOW I WORK -->
+  <section>
+    <h2 data-i18n="how_title"></h2>
+    <p data-i18n="how_body"></p>
+  </section>
+
+  <!-- EXPERIENCE -->
+  <section>
+    <h2 data-i18n="exp_title"></h2>
+    <p data-i18n="exp_body"></p>
+  </section>
+
+  <!-- ENGAGEMENTS -->
+  <section>
+    <h2 data-i18n="eng_title"></h2>
+    <ul>
+      <li data-i18n="eng_1"></li>
+      <li data-i18n="eng_2"></li>
+      <li data-i18n="eng_3"></li>
+      <li data-i18n="eng_4"></li>
+      <li data-i18n="eng_5"></li>
+    </ul>
+  </section>
+
+</main>
+
+<footer>
+  <div class="container">
+    <p data-i18n="contact"></p>
+    <p>WhatsApp: <a href="https://wa.me/5511981011148">+55 11 981.011.148</a></p>
+  </div>
+</footer>
+
+<script>
+  const content = {
+    en: {
+      title: "Independent Executive Oversight & Strategic Advisory in Brazil",
+      intro: "I work with foreign investors operating in Brazil, providing independent strategic oversight, governance supervision, and senior-level advisory support.",
+      what_title: "What I Do",
+      what_body: "I act as a trusted local extension of boards, investment committees, and executive leadership, ensuring clarity, control, and alignment in complex Brazilian environments. My role focuses on governance and decision quality—not day-to-day execution.",
+      how_title: "How I Work",
+      how_body: "Engagements are independent, selective, and typically long-term. I maintain structural independence from local management and operate with clear mandates and direct reporting to investors or boards.",
+      exp_title: "Experience Snapshot",
+      exp_body: "I have supported institutional investors and international stakeholders through executive oversight of Brazilian operations, joint ventures, and real estate SPEs, including large-scale residential developments in São Paulo.",
+      eng_title: "Typical Engagements",
+      eng_1: "Executive oversight of Brazilian subsidiaries or SPEs",
+      eng_2: "Governance supervision of joint ventures and partnerships",
+      eng_3: "Strategic advisory to boards and investment committees",
+      eng_4: "Independent monitoring of execution and risk",
+      eng_5: "Trusted local representation under defined mandates",
+      contact: "Contact: talktome@lhsc.srv.br"
+    },
+    pt: {
+      title: "Supervisão Executiva Independente & Consultoria Estratégica no Brasil",
+      intro: "Atuo com investidores estrangeiros no Brasil, oferecendo supervisão executiva independente, governança estratégica e aconselhamento em nível sênior.",
+      what_title: "O Que Eu Faço",
+      what_body: "Atuo como extensão local de conselhos, comitês de investimento e lideranças executivas, assegurando clareza, controle e alinhamento em ambientes brasileiros complexos. Meu foco é governança — não a execução operacional diária.",
+      how_title: "Como Eu Atuo",
+      how_body: "Os mandatos são independentes, seletivos e, em geral, de longo prazo. Mantenho independência estrutural da gestão local e reporto diretamente a investidores ou conselhos.",
+      exp_title: "Resumo de Experiência",
+      exp_body: "Tenho experiência apoiando investidores institucionais e stakeholders internacionais por meio da supervisão executiva de SPEs imobiliárias, joint ventures e operações no Brasil, incluindo grandes projetos residenciais em São Paulo.",
+      eng_title: "Mandatos Típicos",
+      eng_1: "Supervisão executiva de SPEs e subsidiárias no Brasil",
+      eng_2: "Governança independente de joint ventures e parcerias",
+      eng_3: "Aconselhamento estratégico a conselhos e comitês",
+      eng_4: "Monitoramento independente de execução e riscos",
+      eng_5: "Representação local sob mandato definido",
+      contact: "Contato: falacomigo@lhsc.srv.br"
+    },
+    es: {
+      title: "Supervisión Ejecutiva Independiente & Asesoría Estratégica en Brasil",
+      intro: "Trabajo con inversores extranjeros que operan en Brasil, ofreciendo supervisión ejecutiva independiente, control de gobernanza y asesoría estratégica de alto nivel.",
+      what_title: "Qué Hago",
+      what_body: "Actúo como extensión local de directorios, comités de inversión y liderazgo ejecutivo, garantizando claridad, control y alineación en entornos brasileños complejos. Mi enfoque es estratégico y de gobernanza, no operativo.",
+      how_title: "Cómo Trabajo",
+      how_body: "Los mandatos son independientes, selectivos y generalmente de largo plazo. Mantengo independencia estructural de la gestión local y reporto directamente a inversores o directorios.",
+      exp_title: "Resumen de Experiencia",
+      exp_body: "He apoyado a inversores institucionales y actores internacionales mediante supervisión ejecutiva de SPEs inmobiliarias, joint ventures y operaciones en Brasil, incluyendo grandes desarrollos residenciales en São Paulo.",
+      eng_title: "Mandatos Típicos",
+      eng_1: "Supervisión ejecutiva de SPEs y filiales en Brasil",
+      eng_2: "Gobernanza independiente de joint ventures y alianzas",
+      eng_3: "Asesoría estratégica a directorios y comités",
+      eng_4: "Monitoreo independiente de ejecución y riesgos",
+      eng_5: "Representación local bajo mandato definido",
+      contact: "Contacto: hablame@lhsc.srv.br"
+    }
+  };
+
+  function setLang(lang) {
+    document.querySelectorAll("[data-i18n]").forEach(el => {
+      const key = el.getAttribute("data-i18n");
+      el.textContent = content[lang][key];
+    });
+
+    document.querySelectorAll(".lang-switch button").forEach(btn => btn.classList.remove("active"));
+    document.getElementById("btn-" + lang).classList.add("active");
+  }
+
+  // default language
+  setLang("en");
+</script>
+
 </body>
 </html>
